--- a/scss/style.css
+++ b/scss/style.css
@@ -6544,6 +6544,62 @@ body, html {
   }
 }
 
+.more-products-title {
+  margin: 30px 0;
+  font-size: 25px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .more-products-title {
+    text-align: left !important;
+  }
+
+  .more-products-nav-btn-container {
+    position: relative;
+    height: 300px;
+  }
+
+  .left-nav {
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    width: 80px;
+    height: 80px;
+    background-color: #222222;
+    color: #ffffff;
+    text-align: center;
+    line-height: 80px;
+    font-size: 30px;
+  }
+
+  .right-nav {
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    width: 80px;
+    height: 80px;
+    background-color: #222222;
+    color: #ffffff;
+    text-align: center;
+    line-height: 80px;
+    font-size: 30px;
+  }
+
+  .more-products-wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    overflow-y: hidden;
+    overflow-x: hidden;
+    height: 300px;
+  }
+  .more-products-wrapper .more-products-image {
+    width: 100%;
+    height: 300px;
+    object-fit: fill;
+  }
+}
 /*our partners*/
 .our-partners {
   background-color: #FAFAFA;
