--- a/css/style.css
+++ b/css/style.css
@@ -5003,43 +5003,48 @@ body, html {
 
 @media screen and (min-width: 768px) {
   .more-products-title {
-    text-align: left !important; }
-  .more-products-nav-btn-container {
-    position: relative;
-    height: 300px; }
-  .left-nav {
-    position: absolute;
-    left: -20px;
-    top: 50%;
-    width: 80px;
-    height: 80px;
-    background-color: #222222;
-    color: #ffffff;
-    text-align: center;
-    line-height: 80px;
-    font-size: 30px; }
-  .right-nav {
-    position: absolute;
-    right: -20px;
-    top: 50%;
-    width: 80px;
-    height: 80px;
-    background-color: #222222;
-    color: #ffffff;
-    text-align: center;
-    line-height: 80px;
-    font-size: 30px; }
-  .more-products-wrapper {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    overflow-y: hidden;
-    overflow-x: hidden;
-    height: 300px; }
-  .more-products-wrapper .more-products-image {
-    width: 100%;
-    height: 300px;
-    object-fit: fill; } }
+    text-align: left !important; } }
+
+.more-products-nav-btn-container {
+  position: relative;
+  height: 300px; }
+
+.left-nav {
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  width: 80px;
+  height: 80px;
+  background-color: #222222;
+  color: #ffffff;
+  text-align: center;
+  line-height: 80px;
+  font-size: 30px; }
+
+.right-nav {
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  width: 80px;
+  height: 80px;
+  background-color: #222222;
+  color: #ffffff;
+  text-align: center;
+  line-height: 80px;
+  font-size: 30px; }
+
+.more-products-wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  overflow-y: hidden;
+  overflow-x: hidden;
+  height: 300px; }
+
+.more-products-wrapper .more-products-image {
+  width: 100%;
+  height: 300px;
+  object-fit: fill; }
 
 /*our partners*/
 .our-partners {
@@ -5129,7 +5134,7 @@ footer .top-footer .top-footer-item {
   margin-top: 20px; }
 
 footer .top-footer input[type=text] {
-  min-width: 200px;
+  width: 200px;
   height: 40px;
   padding: 10px; }
 
