--- a/scss/style.css
+++ b/scss/style.css
@@ -6132,6 +6132,7 @@ body, html {
   height: auto;
 }
 
+/*hero section*/
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/sink.jpg");
   height: 95%;
@@ -6260,6 +6261,7 @@ body, html {
     border-right: none;
   }
 }
+/*new collection*/
 .collection {
   padding: 50px 0 60px;
   background-color: #F2F2F2;
@@ -6625,7 +6627,7 @@ body, html {
   margin: 10px;
 }
 
-/*new letter*/
+/*news letter*/
 .newsletter {
   background-image: linear-gradient(to right, #181D01, #000000, #262C03, #000000, #24280C);
   padding: 30px 0;
