--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,764 +24,25 @@ body, html {
   height: auto;
 }
 
-//hero image
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/sink.jpg");
-  height: 95%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+/*hero section*/
+@import "hero-section";
 
-  header {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 20px 10px;
-    z-index: 1;
-
-    img {
-      height: 40px;
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
-      li {
-        display: inline-block;
-        list-style: none;
-      }
-
-
-      a {
-        color: #ffffff;
-        text-decoration: none;
-        padding: 5px 10px;
-        font-size: 12px;
-      }
-
-
-      .services {
-        border-right: 3px solid #ffffff;
-        height: 50px;
-      }
-
-      .logo {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        a {
-          display: none;
-        }
-      }
-
-      .show {
-        display: block;
-      }
-
-    }
-
-  }
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #ffffff;
-
-  h1 {
-    font-size: 5vw;
-  }
-
-}
-
-
-.see-more {
-  text-align: center;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #ffffff;
-  border-bottom: 2px solid #ffffff;
-
-  p {
-    margin: 30px 0 20px;
-    font-size: 25px;
-  }
-}
-
-.left-circle {
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  background-color: #B1B0B0;
-  height: 60px;
-  width: 60px;
-  color: #ffffff;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 60px;
-  font-size: 30px;
-}
-
-.right-circle {
-  position: absolute;
-  top: 50%;
-  right: 10%;
-  background-color: #B1B0B0;
-  width: 60px;
-  height: 60px;
-  text-align: center;
-  color: #ffffff;
-  border-radius: 50%;
-  line-height: 60px;
-  font-size: 30px;
-}
-
-
-@media screen and (max-width: 1260px) {
-  .hero-image {
-    header {
-      nav {
-        display: block;
-        align-items: center;
-        justify-content: space-between;
-
-        .logo {
-          a {
-            display: block;
-          }
-        }
-
-        li {
-          display: block;
-          list-style: none;
-          margin-top: 10px;
-        }
-
-        ul {
-          display: none;
-        }
-
-
-        .services {
-          border-right: none;
-        }
-      }
-    }
-  }
-}
-
-//new collection
-.collection {
-  padding: 50px 0 60px;
-  background-color: #F2F2F2;
-
-  .new-collection-title {
-    font-size: 28px;
-    text-align: center;
-  }
-
-}
-
-.gallery_one {
-  margin-top: 20px;
-}
-
-@media screen and (min-width: 768px) {
-  .new-collection-title {
-    text-align: left !important;
-  }
-
-  .gallery_one {
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 75px;
-  }
-
-  .biget {
-    grid-column: span 5;
-    grid-row: span 5;
-    overflow: hidden;
-  }
-
-  .bathtub {
-    grid-column: span 7;
-    grid-row: span 3;
-    overflow: hidden;
-  }
-
-  .tiles {
-    grid-column: span 4;
-    grid-row: span 2;
-    overflow: hidden;
-  }
-
-  .doors {
-    grid-column: span 3;
-    grid-row: span 2;
-    overflow: hidden;
-  }
-
-  .image-item {
-    margin-top: 0;
-  }
-
-}
-
-@media screen and (max-width: 767px) {
-  .image-item {
-    margin-top: 20px;
-    height: 200px;
-  }
-}
-
-
-.new-collection-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.image-item {
-  display: block;
-  position: relative;
-}
-
-.overlay {
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.2);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-.center-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #ffffff;
-
-  span {
-    display: block;
-  }
-
-  .first-txt {
-    padding-bottom: 10px;
-    font-size: 20px;
-    border-bottom: 2px solid #ffffff;
-  }
-
-  .second-txt {
-    padding-top: 10px;
-    font-size: 22px;
-  }
-}
-
+/*new collection*/
+@import "new-collection-section";
 
 /*new products*/
-.newprods {
-  padding: 30px 0 30px;
-  background-color: #ffffff;
-
-  .newprods-title {
-    font-size: 24px;
-    text-align: center;
-  }
-
-  .prd-item {
-    cursor: pointer;
-
-    span {
-      display: block;
-    }
-
-    .txt-one {
-      text-align: center;
-      font-size: 20px;
-      color: #000000;
-      margin: 10px 0;
-    }
-
-    .txt-two {
-      text-align: center;
-      font-size: 18px;
-      color: #B3B3B8;
-    }
-  }
-
-
-  .new-prod-img {
-    width: 100%;
-    object-fit: contain;
-    max-height: 300px;
-  }
-
-  .prod-img-item {
-    position: relative;
-
-    .prod-overlay {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 100%;
-      width: 100%;
-      opacity: 0;
-      transition: .5s ease;
-      background-color: #17704A;
-    }
-
-    .overlay-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      text-align: center;
-      transform: translate(-50%, -50%);
-      color: #ffffff;
-      padding-bottom: 10px;
-      border-bottom: 2px solid #ffffff;
-    }
-  }
-
-  .prd-item:hover .prod-overlay {
-    opacity: 0.8;
-  }
-
-
-  .new-prod-gallery {
-    margin: 20px 0;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
-  }
-
-
-  @media screen and (min-width: 768px) {
-    .newprods-title {
-      text-align: left !important;
-    }
-    .new-prod-gallery {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(2, 1fr);
-      grid-auto-rows: auto;
-    }
-
-    .txt-one {
-      text-align: left !important;
-    }
-
-    .txt-two {
-      text-align: left !important;
-    }
-  }
-
-
-  @media screen and (min-width: 1024px) {
-    .newprods-title {
-      text-align: left !important;
-    }
-
-    .new-prod-gallery {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(4, 1fr);
-      grid-auto-rows: auto;
-    }
-
-    .txt-one {
-      text-align: left !important;
-    }
-
-    .txt-two {
-      text-align: left !important;
-    }
-  }
-
-  .view-products-btn {
-    margin: 30px auto;
-    background-color: #000000;
-    padding: 20px 30px;
-    color: #ffffff;
-    max-width: 300px;
-    text-align: center;
-    cursor: pointer;
-  }
-
-
-}
+@import "new-products-section";
 
 /*interior design*/
-.interior-design {
-  background-color: #F2F2F2;
-  padding: 80px 0 30px 0;
-
-  .interior-design-item {
-    display: block;
-    margin-top: 20px;
-    height: 350px;
-
-    .interior-design-img {
-      width: 100%;
-      height: 100%;
-      object-fit: fill;
-    }
-  }
-
-  .with-inner-txt {
-    position: relative;
-
-    .inner-txt {
-      text-align: left;
-      position: absolute;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 30px;
-      height: 60%;
-      width: 80%;
-      background-color: #ffffff;
-      left: 5%;
-      bottom: 10%;
-
-      .interior-design-txt-one {
-        color: #A7A7A7;
-        font-size: 20px;
-      }
-
-      .interior-design-txt-two {
-        font-size: 23px;
-        font-weight: lighter;
-      }
-
-    }
-
-    .rotate {
-      text-align: left;
-      //transform: rotate(90deg);
-      font-size: 40px;
-      color: #C4C4C4;
-      font-weight: lighter;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-
-    .interior-design-item {
-      height: auto !important;
-    }
-
-    .inner-txt {
-      width: 50% !important;
-      height: 50% !important;
-    }
-
-    .interior-design-gallery {
-      display: grid;
-      grid-gap: 30px;
-      grid-template-columns: repeat(5, 1fr);
-      grid-auto-rows: 150px;
-    }
-
-    .with-inner-txt {
-      grid-column: span 3;
-      grid-row: span 4;
-      overflow: hidden;
-    }
-
-    .without-inner-txt {
-      grid-column: span 2;
-      grid-row: span 2;
-      overflow: hidden;
-    }
-  }
-}
-
-
-.more-products-title {
-  margin: 30px 0;
-  font-size: 25px;
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .more-products-title {
-    text-align: left !important;
-  }
-}
-
-  .more-products-nav-btn-container {
-    position: relative;
-    height: 300px;
-  }
-
-  .left-nav {
-    position: absolute;
-    left: -20px;
-    top: 50%;
-    width: 80px;
-    height: 80px;
-    background-color: #222222;
-    color: #ffffff;
-    text-align: center;
-    line-height: 80px;
-    font-size: 30px;
-  }
-
-
-  .right-nav {
-    position: absolute;
-    right: -20px;
-    top: 50%;
-    width: 80px;
-    height: 80px;
-    background-color: #222222;
-    color: #ffffff;
-    text-align: center;
-    line-height: 80px;
-    font-size: 30px;
-  }
-
-  .more-products-wrapper {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    overflow-y: hidden;
-    overflow-x: hidden;
-    height: 300px;
-
-    .more-products-image {
-      width: 100%;
-      height: 300px;
-      object-fit: fill;
-    }
-
-  }
-
+@import "interior-design-section";
 
 
 /*our partners*/
-.our-partners {
-  background-color: #FAFAFA;
-  padding: 100px 0 40px;
+@import "our-partners-section";
 
-  .partners-title {
-    text-align: center;
-    margin: 0 auto;
-    font-size: 30px;
-  }
-
-  .partner-images {
-    margin-top: 50px;
-    //display: grid;
-    //grid-gap: 20px;
-    //grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    //grid-template-rows: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .partner-img {
-    width: 100px;
-    object-fit: fill;
-  }
-
-  .partner-img-item {
-    margin: 10px;
-  }
-}
-
-/*new letter*/
-
-.newsletter {
-  background-image: linear-gradient(to right, #181D01, #000000, #262C03, #000000, #24280C);
-  padding: 30px 0;
-
-  .newsletter-items {
-    color: #ffffff;
-    display: block;
-
-    .text-one {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-self: center;
-      font-size: 30px;
-      font-weight: bold;
-      margin: 30px auto !important;
-    }
-
-    .text-two {
-      text-align: center;
-      flex-direction: column;
-      align-self: center;
-      margin: 30px auto !important;
-      font-size: 20px;
-    }
-
-
-    .send-mail-grid {
-      flex-direction: column;
-      align-self: center;
-      margin: 30px auto !important;
-
-      table, th, td {
-        border: 1px solid #ffffff;
-        border-collapse: collapse;
-        padding: 20px;
-        margin: 0 auto;
-      }
-    }
-  }
-
-
-  @media screen and (min-width: 1024px) {
-
-    .newsletter-items {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      vertical-align: middle;
-
-      .text-one {
-        margin: 0 !important;
-      }
-
-      .text-two {
-        margin: 0 !important;
-      }
-
-      .send-mail-grid {
-        margin: 0 !important;
-      }
-
-    }
-
-  }
-}
+/*news letter*/
+@import "news-letter-section";
 
 /*footer*/
-footer {
-  background-color: #E8E8E8;
-
-  .top-footer {
-    padding: 50px 0;
-    background-color: #E8E8E8;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-
-    .top-footer-item {
-      margin-top: 20px;
-    }
-
-
-    input[type="text"] {
-      width: 200px;
-      height: 40px;
-      padding: 10px;
-    }
-
-    input[type="submit"] {
-      margin-left: -50px;
-      height: 40px;
-      width: 70px;
-      background: #303030;
-      color: white;
-      border: 0;
-      -webkit-appearance: none;
-    }
-
-    li {
-      list-style: none;
-    }
-
-    a {
-      text-decoration: none;
-      color: #999999;
-    }
-
-    .top-footer-title {
-      font-weight: bold;
-      padding-bottom: 20px !important;
-    }
-
-    .follow-us {
-      margin: 20px 0 30px;
-    }
-
-    .social-links {
-      a {
-        margin-right: 30px;
-
-        i {
-          color: #000000;
-        }
-      }
-
-    }
-  }
-
-  .middle-footer {
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-
-    img {
-      height: 20px;
-    }
-
-    .flag-section {
-      display: flex;
-      align-items: center;
-    }
-
-    .country-txt {
-      margin-left: 10px;
-      color: #424242;
-      font-weight: bolder;
-    }
-
-    .text-last {
-      color: #424242;
-      font-weight: lighter;
-      font-size: 15px;
-    }
-  }
-
-  .bottom-footer {
-    padding: 30px 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    span {
-      margin: 0 10px !important;
-      font-size: 15px;
-    }
-  }
-}
+@import "footer-section";
 
