--- a/css/style.css
+++ b/css/style.css
@@ -4709,7 +4709,6 @@ body, html {
 .left-circle {
   position: absolute;
   top: 50%;
-  left: 10%;
   background-color: #B1B0B0;
   height: 60px;
   width: 60px;
@@ -4717,20 +4716,21 @@ body, html {
   border-radius: 50%;
   text-align: center;
   line-height: 60px;
-  font-size: 30px; }
+  font-size: 30px;
+  left: 10%; }
 
 .right-circle {
   position: absolute;
   top: 50%;
-  right: 10%;
   background-color: #B1B0B0;
-  width: 60px;
   height: 60px;
-  text-align: center;
+  width: 60px;
   color: #ffffff;
   border-radius: 50%;
+  text-align: center;
   line-height: 60px;
-  font-size: 30px; }
+  font-size: 30px;
+  right: 10%; }
 
 @media screen and (max-width: 1260px) {
   .hero-image header nav {
@@ -5013,7 +5013,6 @@ body, html {
 
 .left-nav {
   position: absolute;
-  left: -20px;
   top: 50%;
   width: 80px;
   height: 80px;
@@ -5021,11 +5020,11 @@ body, html {
   color: #ffffff;
   text-align: center;
   line-height: 80px;
-  font-size: 30px; }
+  font-size: 30px;
+  left: -20px; }
 
 .right-nav {
   position: absolute;
-  right: -20px;
   top: 50%;
   width: 80px;
   height: 80px;
@@ -5033,7 +5032,8 @@ body, html {
   color: #ffffff;
   text-align: center;
   line-height: 80px;
-  font-size: 30px; }
+  font-size: 30px;
+  right: -20px; }
 
 .more-products-wrapper {
   display: grid;
