--- a/css/new-collection-section.css
+++ b/css/new-collection-section.css
@@ -1,85 +1,59 @@
 .collection {
   height: auto;
   padding: 50px 0 100px;
-  background-color: #F2F2F2;
-
-  .new-collection-title {
+  background-color: #F2F2F2; }
+  .collection .new-collection-title {
     font-size: 28px;
-    text-align: center;
-  }
-
-}
+    text-align: center; }
 
 .gallery_one {
-  margin-top: 45px;
-}
+  margin-top: 45px; }
 
 @media screen and (min-width: 768px) {
-  .collection{
-    height: 83% !important;
-  }
+  .collection {
+    height: 83% !important; }
   .new-collection-title {
-    text-align: left !important;
-  }
-
+    text-align: left !important; }
   .gallery_one {
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 100px;
-  }
-
+    grid-auto-rows: 100px; }
   .biget {
     grid-column: span 5;
     grid-row: span 5;
-    overflow: hidden;
-  }
-
+    overflow: hidden; }
   .bathtub {
     grid-column: span 7;
     grid-row: span 3;
-    overflow: hidden;
-  }
-
+    overflow: hidden; }
   .tiles {
     grid-column: span 4;
     grid-row: span 2;
-    overflow: hidden;
-  }
-
+    overflow: hidden; }
   .doors {
     grid-column: span 3;
     grid-row: span 2;
-    overflow: hidden;
-  }
-
+    overflow: hidden; }
   .image-item {
-    margin-top: 0;
-  }
-
-}
+    margin-top: 0; } }
 
 @media screen and (max-width: 767px) {
   .image-item {
     margin-top: 20px;
-    height: 200px;
-  }
-}
-
+    height: 200px; } }
 
 .new-collection-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
+  object-fit: cover; }
 
 .image-item {
   display: block;
-  position: relative;
-}
+  position: relative; }
 
 .overlay {
-  background: rgb(0, 0, 0);
+  background: black;
   background: rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
@@ -87,8 +61,7 @@
   bottom: 0;
   top: 0;
   left: 0;
-  right: 0;
-}
+  right: 0; }
 
 .center-text {
   text-align: center;
@@ -96,20 +69,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #ffffff;
-
-  span {
-    display: block;
-  }
-
-  .first-txt {
+  color: #ffffff; }
+  .center-text span {
+    display: block; }
+  .center-text .first-txt {
     padding-bottom: 10px;
     font-size: 20px;
-    border-bottom: 2px solid #ffffff;
-  }
-
-  .second-txt {
+    border-bottom: 2px solid #ffffff; }
+  .center-text .second-txt {
     padding-top: 10px;
-    font-size: 22px;
-  }
-}
+    font-size: 22px; }
