--- a/scss/hero-section.scss
+++ b/scss/hero-section.scss
@@ -18,7 +18,7 @@ $nav-btn-bg-color: #B1B0B0;
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/sink.jpg");
-  height: 95%;
+  height: 85%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -36,13 +36,24 @@ $nav-btn-bg-color: #B1B0B0;
     z-index: 1;
 
     img {
-      height: 40px;
+      height: 50px;
     }
 
     nav {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-around;
+
+
+      .nav-links{
+        display: flex;
+        justify-content: space-between;
+
+        .right-links{
+          margin-left: 10px;
+          font-weight: lighter !important;
+        }
+      }
 
       li {
         display: inline-block;
@@ -53,12 +64,16 @@ $nav-btn-bg-color: #B1B0B0;
       a {
         color: $text-color;
         text-decoration: none;
-        padding: 5px 10px;
-        font-size: 12px;
+        padding: 3px 10px;
+        letter-spacing: 1px;
+        font-size: 14px;
+        font-weight: bolder;
       }
 
 
-      .services {
+
+      .vertical-bar {
+        padding-right: 10px;
         border-right: 3px solid $text-color;
         height: 50px;
       }
@@ -74,7 +89,7 @@ $nav-btn-bg-color: #B1B0B0;
       }
 
       .show {
-        display: block;
+        display: block !important;
       }
 
     }
@@ -100,7 +115,7 @@ $nav-btn-bg-color: #B1B0B0;
 .see-more {
   text-align: center;
   position: absolute;
-  top: 70%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: $text-color;
@@ -108,18 +123,18 @@ $nav-btn-bg-color: #B1B0B0;
 
   p {
     margin: 30px 0 20px;
-    font-size: 25px;
+    font-size: 20px;
   }
 }
 
 .left-circle {
   @include nav-btn;
-  left: 10%;
+  left: 5%;
 }
 
 .right-circle {
   @include nav-btn;
-  right: 10%;
+  right: 5%;
 }
 
 
@@ -143,12 +158,16 @@ $nav-btn-bg-color: #B1B0B0;
           margin-top: 10px;
         }
 
-        ul {
+        .right-links{
+          margin-left: 0 !important;
+        }
+
+        .nav-links {
           display: none;
         }
 
 
-        .services {
+        .vertical-bar {
           border-right: none;
         }
       }
