--- a/scss/news-letter-section.scss
+++ b/scss/news-letter-section.scss
@@ -1,12 +1,15 @@
 .newsletter {
+  height: auto;
   background-image: linear-gradient(to right, #181D01, #000000, #262C03, #000000, #24280C);
   padding: 30px 0;
 
   .newsletter-items {
     color: #ffffff;
     display: block;
+    height: 100%;
 
     .text-one {
+      height: 100%;
       text-align: center;
       display: flex;
       flex-direction: column;
@@ -17,6 +20,7 @@
     }
 
     .text-two {
+      height: 100%;
       text-align: center;
       flex-direction: column;
       align-self: center;
@@ -26,6 +30,7 @@
 
 
     .send-mail-grid {
+      height: 100%;
       flex-direction: column;
       align-self: center;
       margin: 30px auto !important;
@@ -42,12 +47,17 @@
 
   @media screen and (min-width: 1024px) {
 
+    .newsletter {
+      height: 25% !important;
+    }
+
     .newsletter-items {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       flex-wrap: wrap;
       vertical-align: middle;
+      height: 100%;
 
       .text-one {
         margin: 0 !important;
